--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 /config/deploy.rb
 /config/deploy/*
+
+/config/environments/development.rb
+
